Fixed navbar scaling on mobile devices

--- a/App/staticfiles/css/dashboard.css
+++ b/App/staticfiles/css/dashboard.css
@@ -163,7 +163,7 @@
     width: 25rem;
     top: var(--header-height);
     left: 0;
-    z-index: 7999;
+    z-index: 7000;
     border-right: 1px solid var(--theme-color)!important;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15)!important;
     margin-bottom: 5rem;
